--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,3 +37,9 @@ h1, h2, h3, h4, h5, h6, p {
   height: 100vh;
   width: 100vw;
 }
+
+.home {
+  display: grid;
+  place-items: center;
+  height: 100%;
+}
