--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,6 +1,8 @@
 nav {
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
 }
 
 nav a {
