--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -79,6 +79,32 @@ h1, h2, h3, h4, h5, h6, p {
   cursor: pointer;
 }
 
+/* color component */
+
+.color-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  height: 100%;
+  width: 100%;
+  gap: 2rem;
+}
+
+.card {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+
+.card-content {
+  border-radius: 80% 20% 84% 16% / 44% 48% 52% 56%;
+  border: black solid 2px;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
 
 /* blue */
 
