--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,7 +21,7 @@ body {
   background-color: black;
   color: white;
 }
-
+rgb(13, 58, 92)
 h1 {
   font-family: poppinsBold;
 }
@@ -106,16 +106,28 @@ h1, h2, h3, h4, h5, h6, p {
   place-items: center;
 }
 
+.card-content p {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 2rem;
+  border-radius: 50px;
+  min-width: 35%;
+  text-align: center;
+  font-size: 1.2rem;
+  font-family: poppinsBold;
+  box-shadow: 0px 0px 0px 1px white;
+}
+
 /* blue */
 
 .blue {
-  background-color: blue;
+  background-color: rgb(18, 81, 128);
 }
 
 /* yellow  */
 
 .yellow {
-  background-color: yellow;
+  background-color: rgb(224, 224, 49);
   color: black;
 }
 
