--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -3,8 +3,10 @@ nav {
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
+    padding: 0.5rem;
 }
 
 nav a {
     text-align: center;
+    color: white;
 }
